--- a/orders.html
+++ b/orders.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaf Me Alone</title>
-    <link rel="stylesheet" href="/Users/steven/Downloads/bsg_HTML_UI/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -65,7 +65,7 @@
 
         const orderItems = [
             { orderItemID: 1, orderID: 1, plantID: 1, quantity: 2 },
-            { orderItemID: 2, orderID: 1, plantID: 3, quantity: 1 },
+            { orderItemID: 2, orderID: 1, plantID: 2, quantity: 1 },
         ];
 
         const plants = [
