--- a/customers.html
+++ b/customers.html
@@ -3,111 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Plants</title>
 </head>
+<script language="JavaScript">
+    function showCustomerForm(action) {
+        const container = document.getElementById('form-space');
+        container.innerHTML = ''; // Clear this section
+
+        const form = document.createElement('form');
+        const legend = document.createElement('legend');
+        legend.innerHTML = `<strong>${action} Customer</strong>`;
+        form.appendChild(legend);
+
+        const fieldset = document.createElement('fieldset');
+
+        const createInputField = (labelText, inputType, inputName) => {
+            const label = document.createElement('label');
+            label.textContent = labelText;
+            const input = document.createElement('input');
+            input.type = inputType;
+            input.name = inputName;
+            fieldset.appendChild(label);
+            fieldset.appendChild(input);
+        };
+
+        createInputField('Name', 'text', 'name');
+        createInputField('Email', 'email', 'email');
+        createInputField('Phone', 'tel', 'phone');
+        createInputField('Address', 'text', 'address');
+        createInputField('Create Date', 'datetime-local', 'createDate');
+
+        form.appendChild(fieldset);
+
+        const btns = document.createElement('div');
+
+        const submitBtn = document.createElement('input');
+        submitBtn.className = 'btn';
+        submitBtn.type = 'submit';
+        submitBtn.value = `${action} Customer`;
+        btns.appendChild(submitBtn);
+
+        const cancelBtn = document.createElement('input');
+        cancelBtn.className = 'btn';
+        cancelBtn.type = 'button';
+        cancelBtn.value = 'Cancel';
+        cancelBtn.onclick = () => (container.innerHTML = '');
+        btns.appendChild(cancelBtn);
+
+        form.appendChild(btns);
+        container.appendChild(form);
+    }
+
+    function showDeleteForm(button) {
+        const container = document.getElementById('form-space');
+        container.innerHTML = ''; // Clear this section
+
+        const form = document.createElement('form');
+        const legend = document.createElement('legend');
+        legend.innerHTML = `<strong>Delete Customer</strong>`;
+        form.appendChild(legend);
+
+        const confirmation = document.createElement('p');
+        confirmation.innerHTML = "Are you sure you want to delete the following customer?";
+        form.appendChild(confirmation);
+
+        const row = button.parentElement.parentElement;
+        const cells = row.getElementsByTagName('td');
+        const id = cells[0].textContent;
+        const name = cells[1].textContent;
+
+        const deletingCustomer = document.createElement('p');
+        deletingCustomer.innerHTML = `ID: ${id}, Name: ${name}`;
+        form.appendChild(deletingCustomer);
+
+        const btns = document.createElement('div');
+
+        const deleteBtn = document.createElement('input');
+        deleteBtn.type = "submit";
+        deleteBtn.className = "btn";
+        deleteBtn.value = "Delete Customer";
+        btns.appendChild(deleteBtn);
+
+        const cancelBtn = document.createElement('input');
+        cancelBtn.className = 'btn';
+        cancelBtn.type = 'button';
+        cancelBtn.value = 'Cancel';
+        cancelBtn.onclick = () => (container.innerHTML = '');
+        btns.appendChild(cancelBtn);
+
+        form.appendChild(btns);
+        container.appendChild(form);
+    }
+</script>
 <body>
 
     <h2>Customer Information</h2>
-    <a href="#">New</a>
+    <button onclick="showCustomerForm('Add')">Add</button>
     <table>
         <tr>
-            <th></th>
-            <th></th>
+            
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
             <th>Phone</th>
             <th>Address</th>
             <th>Create Date</th>
+            <th></th>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
             <td>1</td>
             <td>Jane Doe</td>
             <td>jane.doe@email.com</td>
             <td>1234567890</td>
             <td>123 Penn St, City, PA 15208</td>
             <td>1/15/24 10:30</td>
+            <td>
+                <button onclick="showCustomerForm('Edit')">Edit</button>
+                <button onclick="showDeleteForm(this)">Delete</button>
+            </td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
             <td>2</td>
             <td>John Smith</td>
             <td>john.smith@email.com</td>
             <td>9876543210</td>
             <td>456 Oakdale Ave, Town, PA 15217</td>
             <td>2/20/24 15:45</td>
+            <td>
+                <button onclick="showCustomerForm('Edit')">Edit</button>
+                <button onclick="showDeleteForm(this)">Delete</button>
+            </td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
             <td>3</td>
             <td>Mary Johnson</td>
             <td>mary.j@email.com</td>
             <td>1122334455</td>
             <td>789 Pine Rd, Village, PA 15601</td>
             <td>3/18/24 12:00</td>
+            <td>
+                <button onclick="showCustomerForm('Edit')">Edit</button>
+                <button onclick="showDeleteForm(this)">Delete</button>
+            </td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
             <td>4</td>
             <td>Paul Brown</td>
             <td>paul.b@email.com</td>
             <td>6677889900</td>
             <td>321 Birchwood Ln, City, PA 15232</td>
             <td>4/5/24 9:20</td>
+            <td>
+                <button onclick="showCustomerForm('Edit')">Edit</button>
+                <button onclick="showDeleteForm(this)">Delete</button>
+            </td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
             <td>5</td>
             <td>Linda Green</td>
             <td>linda.g@email.com</td>
             <td>5544332211</td>
             <td>654 Cedarcliff St, Town, PA 15213</td>
             <td>5/25/24 16:15</td>
+            <td>
+                <button onclick="showCustomerForm('Edit')">Edit</button>
+                <button onclick="showDeleteForm(this)">Delete</button>
+            </td>
         </tr>
     </table>
-
-    <div id="insert" style="display: block">
-        <form id="add-customer-form">
-            <legend><strong>Add Customer</strong></legend>
-            <fieldset class="fields">
-                <label> Name </label> <input type="text" name="name">
-                <label> Email </label> <input type="email" name="email">
-                <label> Phone </label> <input type="tel" name="phone">
-                <label> Address </label> <input type="text" name="address">
-                <label> Create Date </label> <input type="datetime-local" name="createDate">
-            </fieldset>
-            <input class="btn" type="submit" id="add-customer-btn" value="Add Customer">
-        </form>
-    </div>    
-
-    <div id="edit" style="display: block">
-        <form id="edit-customer-form">
-            <legend><strong>Add Customer</strong></legend>
-            <fieldset class="fields">
-                <label> Name </label> <input type="text" name="name">
-                <label> Email </label> <input type="email" name="email">
-                <label> Phone </label> <input type="tel" name="phone">
-                <label> Address </label> <input type="text" name="address">
-                <label> Create Date </label> <input type="datetime-local" name="createDate">
-            </fieldset>
-            <input class="btn" type="submit" id="add-customer-btn" value="Add Customer">
-        </form>
-    </div>    
-
-    <div id="delete" style="display: block">
-        <form id="delete-customer-form">
-            <legend><strong>Edit Customer</strong></legend>
-              <p>Are you sure you want to delete the following customer?</p>
-              <p>ID: 1</p>
-              <p>Name: Jane Doe</p>
-              <input class="btn" type="submit" id="delete-customer-btn" value="Delete Customer">
-        </form> 
-    </div>
+    <p></p>
+    <div id="form-space" style="display: block"></div>
 </body>
 </html>
