Added title and nav to customers, plants and suppliers

--- a/plants.html
+++ b/plants.html
@@ -100,7 +100,16 @@
 
 </script>
 <body>
-
+    <h1>Leaf Me Alone</h1>
+    <nav>
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="customers.html">Customers</a></li>
+            <li><a href="orders.html">Orders</a></li>
+            <li><a href="plants.html">Plants</a></li>
+            <li><a href="suppliers.html">Suppliers</a></li>
+        </ul>
+    </nav>
     <h2>Plant Inventory</h2>
     <button onclick="showPlantForm('Add')">Add</button>
     <table>
