--- a/suppliers.html
+++ b/suppliers.html
@@ -97,7 +97,16 @@
     }
 </script>
 <body>
-
+    <h1>Leaf Me Alone</h1>
+    <nav>
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="customers.html">Customers</a></li>
+            <li><a href="orders.html">Orders</a></li>
+            <li><a href="plants.html">Plants</a></li>
+            <li><a href="suppliers.html">Suppliers</a></li>
+        </ul>
+    </nav>
     <h2>Supplier Information</h2>
     <button onclick="showSupplierForm('Add')">Add</button>
     <table>
