updated form look for orders, created new plantssuppliers page, updated all pages to include new page in nav, and added drop down menu to plants

--- a/customers.html
+++ b/customers.html
@@ -105,6 +105,7 @@
             <li><a href="orders.html">Orders</a></li>
             <li><a href="plants.html">Plants</a></li>
             <li><a href="suppliers.html">Suppliers</a></li>
+            <li><a href="plantssuppliers.html">Plants Suppliers</a></li>
         </ul>
     </nav>
     <h2>Customer Information</h2>
