--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="orders.html">Orders</a></li>
             <li><a href="plants.html">Plants</a></li>
             <li><a href="suppliers.html">Suppliers</a></li>
+            <li><a href="plantssuppliers.html">Plants Suppliers</a></li>
         </ul>
     </nav>
 
@@ -28,6 +29,8 @@
     <h3>Plants</h3>
     <p>The <a href="plants.html">"Plants"</a> page provides an inventory of plants Leaf Me Alone currently sells. View this page to update the inventory or make adjustments, add new plants to the inventory, or delete a plant from our stock.</p>
     <h3>Suppliers</h3>
-    <p>Finally, our <a href="suppliers.html">"Suppliers"</a> page gives you a view of all of our plant suppliers. Navigate to this page to update, add, or delete suppliers for our plants.</p>
+    <p>Next, our <a href="suppliers.html">"Suppliers"</a> page gives you a view of all of our plant suppliers. Navigate to this page to update, add, or delete suppliers for our plants.</p>
+    <h3>Plants Suppliers</h3>
+    <p>Finally, the <a href="plantssuppliers.html">"Plants Suppliers</a> page allows you to see which plants are supplied by a provider.</p>
 </body>
 </html>
