fixed bug with plants/supplier pages

--- a/orders.html
+++ b/orders.html
@@ -20,8 +20,7 @@
     </nav>
 
     <h2>Customer Orders</h2>
-
-    <h3>All Orders</h3>
+    <button onclick="showOrderForm()">Add</button>
     <table id="ordersTable">
         <thead>
             <tr>
@@ -39,8 +38,6 @@
             <!-- Orders will be dynamically added here -->
         </tbody>
     </table>
-
-    <button onclick="showOrderForm()">Add New Order</button>
 
     <div id="orderFormContainer" style="display: none;">
         <h3>Add / Edit Order</h3>
