--- a/plants.html
+++ b/plants.html
@@ -7,7 +7,7 @@
     <title>Plants</title>
 </head>
 <script language="JavaScript">
-    function showPlantForm(type){
+    function showPlantForm(action){
         const container = document.getElementById('form-space');
         container.innerHTML = '' //Clear this section
 
