--- a/suppliers.html
+++ b/suppliers.html
@@ -7,7 +7,7 @@
     <title>Suppliers</title>
 </head>
 <script language="JavaScript">
-    function showSupplierForm(type) {
+    function showSupplierForm(action) {
         const container = document.getElementById('form-space');
         container.innerHTML = ''; // Clear this section
 
