--- a/suppliers.html
+++ b/suppliers.html
@@ -7,13 +7,13 @@
     <title>Suppliers</title>
 </head>
 <script language="JavaScript">
-    function showSupplierForm(action) {
+    function showSupplierForm(button, action) {
         const container = document.getElementById('form-space');
         container.innerHTML = ''; // Clear this section
 
         const form = document.createElement('form');
         const legend = document.createElement('legend');
-        legend.innerHTML = `<strong>${type} Supplier</strong>`;
+        legend.innerHTML = `<strong>${action} Supplier</strong>`;
         form.appendChild(legend);
 
         const fieldset = document.createElement('fieldset');
@@ -46,7 +46,7 @@
         const submitBtn = document.createElement('input');
         submitBtn.className = 'btn';
         submitBtn.type = 'submit';
-        submitBtn.value = `${type} Supplier`;
+        submitBtn.value = `${action} Supplier`;
         btns.appendChild(submitBtn);
 
         const cancelBtn = document.createElement('input');
@@ -131,7 +131,7 @@
             <td>contact@greenhouse.com</td>
             <td>$1,200.00</td>
             <td>
-                <button onclick="showSupplierForm('Edit')">Edit</button>
+                <button onclick="showSupplierForm(this, 'Edit')">Edit</button>
                 <button onclick="showDeleteForm(this)">Delete</button>
             </td>
         </tr>
@@ -142,7 +142,7 @@
             <td>sales@florasupplies.com</td>
             <td>$800.50</td>
             <td>
-                <button onclick="showSupplierForm('Edit')">Edit</button>
+                <button onclick="showSupplierForm(this, 'Edit')">Edit</button>
                 <button onclick="showDeleteForm(this)">Delete</button>
             </td>
         </tr>
@@ -153,7 +153,7 @@
             <td>info@plantworld.com</td>
             <td>$950.00</td>
             <td>
-                <button onclick="showSupplierForm('Edit')">Edit</button>
+                <button onclick="showSupplierForm(this, 'Edit')">Edit</button>
                 <button onclick="showDeleteForm(this)">Delete</button>
             </td>
         </tr>
@@ -164,7 +164,7 @@
             <td>support@gardenessentials.com</td>
             <td>$670.25</td>
             <td>
-                <button onclick="showSupplierForm('Edit')">Edit</button>
+                <button onclick="showSupplierForm(this, 'Edit')">Edit</button>
                 <button onclick="showDeleteForm(this)">Delete</button>
             </td>
         </tr>
@@ -175,7 +175,7 @@
             <td>help@outdoornursery.com</td>
             <td>$320.40</td>
             <td>
-                <button onclick="showSupplierForm('Edit')">Edit</button>
+                <button onclick="showSupplierForm(this, 'Edit')">Edit</button>
                 <button onclick="showDeleteForm(this)">Delete</button>
             </td>
         </tr>
